# astradb-multivector

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: test.yml
examples/: README.md  async_multivector_example.py
examples/gutenberg/: README.md  gutenberg_example.py
examples/late_interaction/: README.md  colbert_example.py  colpali_example.py
examples/notebooks/: ColPali.ipynb
libs/astra_multivector/: __init__.py  astra_multi_vector_table.py  ingest.py  vector_column_options.py
libs/astra_multivector/table/: async_astra_multi_vector_table.py
src/astra_multivector/: __init__.py  astra_multi_vector_table.py  async_astra_multi_vector_table.py  vector_column_options.py
src/astra_multivector/late_interaction/: README.md  __init__.py  late_interaction_pipeline.py  utils.py
src/astra_multivector/late_interaction/models/: base.py  colbert.py  colpali.py
src/late_interaction/: README.md
src/late_interaction/models/: base.py  colbert.py  colpali.py
src/python/: __init__.py  ingest.py
tests/: README.md  run_tests.py  run_tests.sh  test_astra_multi_vector_table.py  test_async_astra_multi_vector_table.py  test_init.py  test_vector_column_options.py
tests/late_interaction/: __init__.py  test_pipeline.py  test_utils.py
tests/late_interaction/models/: __init__.py  test_base.py  test_colbert.py  test_colpali.py
tests/table/: test_astra_multi_vector_table.py  test_async_astra_multi_vector_table.py
