[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-multivector"
version = "0.1.0"
description = "Multivector Tables using the DataAPI from AstraDB"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "astrapy==2.0.0rc0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rerankers[api,transformers]>=0.8.0",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
late_interaction = [
    "colbert-ai==0.2.20",
    "colpali-engine>=0.3.1,<0.4.0",
    "transformers>=4.38.2",
    "torch>=2.2.0",
    "scikit-learn>=1.3.0",  # for clustering in pooling
    "numpy>=1.24.0",
]

dev = [

    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "types-pillow>=10.2.0.20240213",
    "ruff>=0.9.7,<0.10",
    "pre-commit>=3.7.0",
    "build>=1.0.3",
    "twine>=4.0.2",
]

all = ["astra-multivector[late_interaction]"]
test = ["astra-multivector[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/astra_multivector"]

[tool.hatch.build]
include = [
  "src/astra_multivector/**/*.py",
]
